--- a/app/src/main/resources/static/auth/patients-login.html
+++ b/app/src/main/resources/static/auth/patients-login.html
@@ -164,7 +164,7 @@
       const form = document.querySelector('#login-form');
       const formData = new FormData(form);
 
-      fetch("http://localhost:8080/auth/patientLogin", {
+      fetch("http://175.106.99.31:80/auth/patientLogin", {
         method: "POST",
         body: formData
       })
