--- a/app/src/main/resources/static/register/community-news.html
+++ b/app/src/main/resources/static/register/community-news.html
@@ -267,7 +267,7 @@
     <script>
       $(".logout").click(() => {
         console.log(11)
-        fetch(`http://localhost:8080/auth/logout`, {
+        fetch(`http://175.106.99.31:80/auth/logout`, {
           method: 'GET'
         })
           .then(response => response.json())
