--- a/app/src/main/resources/static/register/doctors-signup.html
+++ b/app/src/main/resources/static/register/doctors-signup.html
@@ -354,7 +354,7 @@
         idValidationMsg.style.color = '#dc3545';
         return;
       } else {
-        fetch(`http://localhost:8080/doctors/check-duplicate/${id}`)
+        fetch(`http://175.106.99.31:80/doctors/check-duplicate/${id}`)
           .then((response) => response.json())
           .then((result) => {
             if (result.status === 'failure') {
@@ -761,7 +761,7 @@
 
           json = JSON.stringify(Object.fromEntries(formData));
           console.log(json);
-          fetch('http://localhost:8080/doctors', {
+          fetch('http://175.106.99.31:80/doctors', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
@@ -780,7 +780,7 @@
             })
             .then((dno) => {
               console.log(dno);
-              fetch(`http://localhost:8080/doctors/${dno}`, {
+              fetch(`http://175.106.99.31:80/doctors/${dno}`, {
                 method: 'POST',
                 body: formData,
               })
@@ -811,7 +811,7 @@
       }
       formData.append('files', files[0]);
       $.ajax({
-        url: 'http://localhost:8080/doctors/profileimg',
+        url: 'http://175.106.99.31:80/doctors/profileimg',
         data: formData,
         cache: false,
         async: false,
