--- a/app/src/main/resources/static/register/index.html
+++ b/app/src/main/resources/static/register/index.html
@@ -16,7 +16,7 @@
     <div class="btn-gr">
       <div class="topbtn btn-1">작성</div>
       <div class="topbtn btn-2">검색</div>
-      <div class="topbtn btn-3">내정보</div>
+      <div class="topbtn btn-3">냬정보</div>
       <br>
     </div>
 
