--- a/app/src/main/resources/static/register/community-write.html
+++ b/app/src/main/resources/static/register/community-write.html
@@ -182,7 +182,7 @@
       <script>
         $(".logout").click(() => {
           console.log(11)
-          fetch(`http://175.106.99.31:80/auth/logout`, {
+          fetch(`http://175.106.99.31/auth/logout`, {
             method: 'GET'
           })
             .then(response => response.json())
@@ -223,29 +223,27 @@
               <h5 class="card-title"><strong>글 작성</strong></h5>
               <div class="col-12 row g-3">
                   <div class="col-md-5">
-                    <input type="text" class="form-control" placeholder="글 제목 입력" id="title">
+                    <input type="text" class="form-control" placeholder="글 제목 입력" id="title" >
                   </div>
                   <div class="col-md-3">
-                    <select class="form-select" aria-label="Default select example" id="category">
+                    <select class="form-select" aria-label="Default select example" id="category" >
                       <option selected >글 카테고리 선택</option>
                       <option value="1">자유 게시판</option>
                       <option value="2">의학 뉴스</option>
                       <option value="3">질문 게시판</option>
                     </select>
                   </div>
-                   <div class="col-md-3">
+                 <!--    <div class="col-md-3">
                     <input type="password" class="form-control" placeholder="비밀번호" id="password">
-                  </div>
+                  </div> -->
                   
               </div>
                   <div class="form-floating col-md-12 " style="margin-top: 20px;">
-                    <textarea class="form-control content"  id="floatingTextarea" style="height: 100px;" placeholder="글 내용 입력"> </textarea>
+                    <textarea class="form-control content"  id="floatingTextarea" style="height: 100px;" placeholder="글 내용 입력" > </textarea>
                   </div>
                   <div class="col-8 row g-3" style="margin-top: 10px;">
                     <form >
-                      <div class="col-sm-8">
                         <input class="form-control community-files" type="file"  multiple id="formFile">
-                      </div>
                     </form>    
                 </div>
 
