--- a/app/src/main/resources/static/register/index.html
+++ b/app/src/main/resources/static/register/index.html
@@ -12,26 +12,42 @@
 
 <body>
   <div class="body-cover">
-  <div class="body">
-    <div class="btn-gr">
-      <div class="topbtn btn-1">작성</div>
-      <div class="topbtn btn-2">검색</div>
-      <div class="topbtn btn-3">냬정보</div>
-      <br>
+    <div class="body">
+
+      <div class="log-btns">
+        <button type="button" class="btn btn-primary log-mypage" style="display: none;">마이 페이지</button>
+        <button type="button" class="btn btn-primary log-btn"></button>
+      </div>
+
+      <div class="btn-gr">
+        <div class="topbtn btn-1 btn-3d cyan">작성</div>
+        <div class="topbtn btn-2 btn-3d cyan">검색</div>
+        <div class="topbtn btn-3 btn-3d cyan">비회원 조회</div>
+        <br>
+      </div>
+
+      <div id="roots">
+
+
+
+
+      </div>
+
+      <div id="new-windows">
+
+      </div>
+
+      <button class="carousel-control-prev backmov-left" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next backmov-right" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-
-    <div id="roots">
-
-
-
-
-    </div>
-
-    <div id="new-windows">
-
-    </div>
-
-  </div>
   </div>
   <!-- <form>
     <input type="file" name="files" multiple />
