--- a/app/src/main/resources/static/auth/patients-login.html
+++ b/app/src/main/resources/static/auth/patients-login.html
@@ -93,6 +93,8 @@
                     <div class="col-12">
                       <button class="btn btn-primary w-100" type="button">비회원</button>
                     </div>
+                    <div id="naver_id_login">
+                    </div>
                     <div class="col-12">
                       <p class="small mb-0">계정이 없으시다구요? <a href="../register/patients-signup.html">지금 계정 만들기</a></p>
                     </div>
@@ -129,6 +131,11 @@
   <script src="../assets/vendor/simple-datatables/simple-datatables.js"></script>
   <script src="../assets/vendor/tinymce/tinymce.min.js"></script>
   <script src="../assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Naver Login -->
+  <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  
 
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
@@ -207,9 +214,33 @@
       document.cookie = cookieText;
     }
 
-
   </script>
 
+  <!-- 네이버 아이디 로그인 초기화 Script-->
+  <script type="text/javascript">
+    var naver_id_login = new naver_id_login("nl3uBfB5yrcgZZAoTTMH", "http://175.106.99.31/register/index.html");
+    var state = naver_id_login.getUniqState();
+    naver_id_login.setButton("green", 3, 75);
+    naver_id_login.setDomain("http://175.106.99.31/auth/patients-login.html");
+    naver_id_login.setState(state);
+    // naver_id_login.setPopup();
+    naver_id_login.init_naver_id_login();
+  </script>
+
+<!-- 네이버 아이디 로그인 CallBack 페이지 처리 Script : 환자페이지 로그인 성공시 index.html로 Callback -->
+<script type="text/javascript">
+  // var naver_id_login = new naver_id_login("nl3uBfB5yrcgZZAoTTMH", "http://localhost:8080/register/index.html");
+  // 접근 토큰 값 출력
+  // alert(naver_id_login.oauthParams.access_token);
+  // 네이버 사용자 프로필 조회 이후 프로필 정보를 처리할 callback function
+  function naverSignInCallback() {
+    alert(naver_id_login.getProfileData('email'));
+    alert(naver_id_login.getProfileData('nickname'));
+    alert(naver_id_login.getProfileData('age'));
+  }
+  // 네이버 사용자 프로필 조회
+  naver_id_login.get_naver_userprofile("naverSignInCallback()");
+</script>
 </body>
 
 </html>
