naverLogin client ID modify

--- a/app/src/main/resources/static/auth/patients-login.html
+++ b/app/src/main/resources/static/auth/patients-login.html
@@ -218,7 +218,7 @@
 
   <!-- 네이버 아이디 로그인 초기화 Script-->
   <script type="text/javascript">
-    var naver_id_login = new naver_id_login("nl3uBfB5yrcgZZAoTTMH", "http://175.106.99.31/register/index.html");
+    var naver_id_login = new naver_id_login("vkdM8y3uWfAk_fx4YN2g", "http://175.106.99.31/register/index.html");
     var state = naver_id_login.getUniqState();
     naver_id_login.setButton("green", 3, 75);
     naver_id_login.setDomain("http://175.106.99.31/auth/patients-login.html");
