04월 20일 까지의 작업 빌드

--- a/app/src/main/resources/static/auth/patients-login.html
+++ b/app/src/main/resources/static/auth/patients-login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 
 <head>
   <meta charset="utf-8">
@@ -65,7 +65,7 @@
                     <p class="text-center small">로그인 후 다양한 진료 서비스를 받아보세요!</p>
                   </div>
 
-                  <form id="login-form" action="doctorLogin" mehtod="post" class="row g-3 needs-validation" novalidate>
+                  <form id="login-form" action="patientLogin" mehtod="post" class="row g-3 needs-validation" novalidate>
 
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">회원 ID</label>
@@ -94,9 +94,10 @@
                       <button class="btn btn-primary w-100" type="button">비회원</button>
                     </div>
                     <div id="naver_id_login">
+                      <!-- <button id="naver_id_login" class="naver_login" style="width:400px"></button> -->
                     </div>
                     <div class="col-12">
-                      <p class="small mb-0">계정이 없으시다구요? <a href="../register/patients-signup.html">지금 계정 만들기</a></p>
+                      <p class="small mb-0">계정이 없으시다구요?<a href="../register/patients-signup.html">지금 계정 만들기</a></p>
                     </div>
                   </form>
 
@@ -108,7 +109,7 @@
 
               <div class="credits">
 
-              </div>
+              </div> 
 
             </div>
           </div>
@@ -135,11 +136,10 @@
   <!-- Naver Login -->
   <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-  
 
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
-
+ 
   <script>
     // 쿠키정보 id 받아오기
     document.querySelector('input[name="id"]').value = getCookie('id');
@@ -167,7 +167,7 @@
       } else {
         setCookie('id', '', 0);
       }
-
+ 
       const form = document.querySelector('#login-form');
       const formData = new FormData(form);
 
@@ -213,34 +213,60 @@
       cookieText += (cookieSecure ? '; secure' : '');
       document.cookie = cookieText;
     }
+ 
 
   </script>
 
-  <!-- 네이버 아이디 로그인 초기화 Script-->
-  <script type="text/javascript">
-    var naver_id_login = new naver_id_login("vkdM8y3uWfAk_fx4YN2g", "http://175.106.99.31/register/index.html");
-    var state = naver_id_login.getUniqState();
-    naver_id_login.setButton("green", 3, 75);
-    naver_id_login.setDomain("http://175.106.99.31/auth/patients-login.html");
-    naver_id_login.setState(state);
-    // naver_id_login.setPopup();
-    naver_id_login.init_naver_id_login();
-  </script>
-
-<!-- 네이버 아이디 로그인 CallBack 페이지 처리 Script : 환자페이지 로그인 성공시 index.html로 Callback -->
+<!-- 네이버 아이디 로그인 초기화 Script-->
 <script type="text/javascript">
-  // var naver_id_login = new naver_id_login("nl3uBfB5yrcgZZAoTTMH", "http://localhost:8080/register/index.html");
-  // 접근 토큰 값 출력
-  // alert(naver_id_login.oauthParams.access_token);
+  var naver_id_login = new naver_id_login("xrpuojJYw18imfX2Z6DQ", "http://175.106.99.31/register/index.html");
+  var state = naver_id_login.getUniqState();
+  naver_id_login.setButton("green", 3, 75);
+  naver_id_login.setDomain("http://175.106.99.31/auth/patients-login.html");
+  naver_id_login.setState(state);
+  // naver_id_login.setPopup();
+  naver_id_login.init_naver_id_login();
+</script>
+<!-- //네이버 아아디 로그인 초기화 Script -->
+
+// <!-- 네이버 아이디 로그인 CallBack 페이지 처리 Script : 환자페이지 로그인 성공시 index.html로 Callback -->
+<script type="text/javascript">
   // 네이버 사용자 프로필 조회 이후 프로필 정보를 처리할 callback function
   function naverSignInCallback() {
-    alert(naver_id_login.getProfileData('email'));
-    alert(naver_id_login.getProfileData('nickname'));
-    alert(naver_id_login.getProfileData('age'));
+    // naver_id_login.getProfileData('프로필항목명');
+		// 프로필 항목은 개발가이드를 참고하시기 바랍니다.
+    // 네이버 사용자 프로필 정보 가져오기
+    var name = naver_id_login.getProfileData('name');
+    var email = naver_id_login.getProfileData('email');
+    var mobile = naver_id_login.getProfileData('mobile');
+
+    // 회원 정보를 JSON 형식으로 만들기 
+    var data = {
+      name: name,
+      email: email,
+      mobile: mobile
+    };
+
+    console.log(data);
+
+    // fetch() 함수를 사용하여 회원 정보를 서버로 전송
+    fetch('http://175.106.99.31/auth/naverLogin', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify(data)
+    }).then(function(response) {
+      // 서버로부터 응답을 받았을 때 처리할 코드
+    }).catch(function(error) {
+      // 오류 처리 코드
+    });
   }
+
   // 네이버 사용자 프로필 조회
-  naver_id_login.get_naver_userprofile("naverSignInCallback()");
+	naver_id_login.get_naver_userprofile("naverSignInCallback()");
 </script>
+
 </body>
 
 </html>
