--- a/app/src/main/resources/static/register/hospitals-view.html
+++ b/app/src/main/resources/static/register/hospitals-view.html
@@ -77,9 +77,54 @@
       .hos-addr:hover {
         cursor: pointer;
       }
+      .modal-open {
+        background: radial-gradient(
+          circle,
+          #000000,
+          #101010,
+          #202020,
+          #303030,
+          #404040,
+          #000000
+        );
+        /* background: linear-gradient(
+          to bottom right,
+          #ff0000,
+          #ff8000,
+          #ffff00,
+          #00ff00,
+          #0000ff,
+          #4b0082,
+          #8b00ff
+        ); */
+      }
+      .modal-open table {
+        background-color: white;
+      }
+
       .modal-body {
         padding: 0px;
+        background: radial-gradient(
+          circle,
+          #000000,
+          #101010,
+          #202020,
+          #303030,
+          #404040,
+          #000000
+        );
+        /* background: linear-gradient(
+          to bottom right,
+          #ff0000,
+          #ff8000,
+          #ffff00,
+          #00ff00,
+          #0000ff,
+          #4b0082,
+          #8b00ff
+        ); */
       }
+
       #update-hos-form {
         display: flex;
         flex-direction: column;
@@ -93,6 +138,10 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 20px;
+      }
+      #hos-PhotoDelete:hover {
+        cursor: pointer;
+        color: red;
       }
     </style>
   </head>
@@ -388,6 +437,39 @@
       <section class="section contact align-middle">
         <div class="pagetitle">
           <h1>나의 병원 정보</h1>
+          <p>
+            <button
+              class="btn btn-primary"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseExample"
+              aria-expanded="false"
+              aria-controls="collapseExample"
+            >
+              내병원삭제
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body" style="width: 400px">
+              등록된 병원정보를 삭제하시겠습니까?
+              <button
+                id="hos-delete-ok"
+                class="btn btn-danger"
+                style="width: 150px"
+              >
+                내병원삭제
+              </button>
+              <button
+                type="button"
+                class="btn btn-secondary mr-auto"
+                onclick="location.reload()"
+                data-bs-dismiss="modal"
+                style="width: 150px"
+              >
+                취소
+              </button>
+            </div>
+          </div>
           <div id="hospitalNo" class="hos-no" style="display: none"></div>
           <div id="hosName" class="hos-name"></div>
         </div>
@@ -521,7 +603,7 @@
                       border-radius: 5px 5px 5px 5px;
                     "
                   >
-                    병원추가
+                    병원정보변경
                   </button>
                 </div>
                 <div
@@ -534,42 +616,35 @@
                     <div class="modal-content">
                       <div class="modal-body" style="min-height: 800px">
                         <form id="update-hos-form" style="width: 500px">
-                          <h5 class="card-title">병원정보 변경</h5>
-                          <div
-                            id="update-hosNo"
-                            class="hos-no"
-                            style="display: none"
-                          ></div>
+                          <h5 class="card-title" style="color: #ffffff">
+                            병원정보 변경
+                          </h5>
+                          <div id="update-hosNo" class="hos-no"></div>
                           <!-- Slides only carousel -->
-                          <div
-                            id="carouselExampleSlidesOnly"
-                            class="carousel slide"
-                            data-bs-ride="carousel"
-                          >
-                            <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                <img
-                                  src="assets/img/slides-1.jpg"
-                                  class="d-block w-100"
-                                  alt="..."
-                                />
-                              </div>
-                              <div class="carousel-item">
-                                <img
-                                  src="assets/img/slides-2.jpg"
-                                  class="d-block w-100"
-                                  alt="..."
-                                />
-                              </div>
-                              <div class="carousel-item">
-                                <img
-                                  src="assets/img/slides-3.jpg"
-                                  class="d-block w-100"
-                                  alt="..."
-                                />
-                              </div>
-                            </div>
-                          </div>
+                          <table class="table table-striped">
+                            <thead>
+                              <tr>
+                                <th scope="col"></th>
+                                <th scope="col"></th>
+                                <th scope="col">
+                                  기존 이미지(체크시 즉시 삭제)
+                                </th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr id="hosphoto-get-list">
+                                <td>
+                                  <div
+                                    id="hos-listNo"
+                                    class="hos-listNo"
+                                    style="display: none"
+                                  ></div>
+                                </td>
+                                <td><div id="hos-phoNo"></div></td>
+                                <td><div id="hos-PhotoFilename"></div></td>
+                              </tr>
+                            </tbody>
+                          </table>
                           <!-- End Slides only carousel-->
                           <div>
                             <!-- 파일 선택 버튼 -->
@@ -580,10 +655,10 @@
                               <div class="col-sm-8">
                                 <input
                                   type="file"
-                                  id="profile-file"
+                                  id="hosPhoto"
                                   accept="image/*"
-                                  class="form-control"
-                                  onchange="previewImage(event);"
+                                  class="hos-photo hospital-files form-control"
+                                  multiple
                                 />
                               </div>
                             </div>
@@ -642,7 +717,16 @@
                             />
                             <label for="floatingInput-b">사업자번호</label>
                           </div>
-
+                          <div
+                            id="hospital-success-message"
+                            style="
+                              display: none;
+                              text-align: center;
+                              color: #77dd77;
+                            "
+                          >
+                            <h4>✅변경되었습니다.</h4>
+                          </div>
                           <div class="row mb-3">
                             <div class="sm-10">
                               <button
@@ -665,7 +749,7 @@
                                   border-radius: 5px 5px 5px 5px;
                                 "
                               >
-                                병원추가
+                                병원정보변경
                               </button>
                             </div>
                           </div>
@@ -848,6 +932,105 @@
               document.getElementById("update-hosSub").value = hospital.hosSub;
               document.getElementById("update-hosBusno").value =
                 hospital.hosBusno;
+
+              //리스트숫자증가
+              const hosPhotoNoDiv = document.getElementById("hos-phoNo");
+              const hosPhotoFilenameDivs =
+                document.querySelectorAll("#hos-PhotoFilename");
+              const phoNoDiv = document.getElementById("hos-listNo");
+
+              //포토넘버
+              hospital.hosphotos.forEach((photo, index) => {
+                const hosPhotoNo = photo.photoNo;
+                const phoNoElement = document.createElement("input");
+                phoNoElement.type = "number"; // type 속성 변경
+                phoNoElement.value = hosPhotoNo;
+                phoNoElement.style.width = "100px";
+                phoNoElement.style.margin = "0px auto";
+                phoNoElement.classList.add("photoNo");
+                phoNoDiv.appendChild(phoNoElement);
+              });
+              //순번
+              // const hosListNoDiv = document.getElementById("hos-listNo");
+              // for (let i = 0; i < hospital.hosphotos.length; i++) {
+              //   const hosListNo = i + 1;
+              //   const listNoElement = document.createElement("span");
+              //   listNoElement.textContent = hosListNo;
+              //   hosListNoDiv.appendChild(listNoElement);
+              // }
+              const photoFilenameDiv =
+                document.getElementById("hos-PhotoFilename");
+              for (let i = 0; i < hospital.hosphotos.length; i++) {
+                const hosPhotoFilename = hospital.hosphotos[i].hosPhotoFilename;
+                const filenameElement = document.createElement("span");
+                filenameElement.textContent = hosPhotoFilename;
+
+                //이미지
+                const image = document.createElement("img");
+                image.src = hospital.hosphotos[i].hosPhotoUrl;
+                image.width = "100";
+                image.height = "100";
+
+                var imageContainer = document.createElement("div");
+                imageContainer.classList.add("filename-checkbox-container");
+                imageContainer.style.marginBottom = "10px";
+                imageContainer.appendChild(filenameElement);
+                imageContainer.appendChild(image);
+                hosPhotoNoDiv.appendChild(imageContainer);
+                //체크박스
+                const checkbox = document.createElement("input");
+                checkbox.type = "checkbox";
+                checkbox.setAttribute(
+                  "id",
+                  `#hos-PhotoCheck-${hospital.hosphotos[i].photoNo}`
+                );
+                checkbox.addEventListener("click", function () {
+                  const container = this.parentElement;
+                  container.remove();
+                  imageContainer.remove();
+                  const phoNoElements = phoNoDiv.getElementsByTagName("span");
+                  if (phoNoElements.length > 0) {
+                    phoNoElements[phoNoElements.length - 1].remove();
+                  }
+                });
+                const checkboxlist = document.getElementById("hos-listCheck");
+                const container = document.createElement("div");
+                container.classList.add("filename-checkbox-container");
+                container.appendChild(filenameElement);
+                container.appendChild(checkbox);
+                container.style.marginLeft = "30px";
+                container.style.marginBottom = "80px";
+                photoFilenameDiv.appendChild(container);
+              }
+              //체크박스로 사진삭제
+              const checkboxes = document.querySelectorAll(
+                'input[type="checkbox"]'
+              );
+              checkboxes.forEach((checkbox) => {
+                checkbox.addEventListener("click", function (event) {
+                  const container = this.parentElement;
+                  hosListPhotoNo = event.target.id.split("-")[2];
+                  container.remove();
+                  imageContainer.remove();
+
+                  fetch(`http://175.106.99.31/hospitalImg/${hosListPhotoNo}`, {
+                    method: "DELETE",
+                  })
+                    .then((response) => response.json())
+                    .then((data) => {
+                      console.log("성공하였음");
+                      // document.querySelector('#btn-img-delete').style.display = 'none';
+                      // location.href = "";
+                      if (data.status == "failure") {
+                        console.log("이미지 삭제 실패!\n" + data.data);
+                        return;
+                      }
+                    })
+                    .catch((error) => {
+                      console.log("실패:", error);
+                    });
+                });
+              });
             } else {
               alert("입력실패");
             }
@@ -859,8 +1042,8 @@
       } else {
         uform.reportValidity();
       }
-
       document.querySelector("#hos-update-submit").onclick = (e) => {
+        document.getElementById("hos-update-submit").style.display = "none";
         let kno = new URL(location.href).searchParams.get("no");
         fetch(`http://175.106.99.31/hospital/${kno}`, {
           method: "PUT",
@@ -880,11 +1063,83 @@
           .then((response) => response.json())
           .then((data) => {
             console.log("성공:", data);
-            // location.href = location.href;
-            //submitFiles(data.data.no);
+            message.style.display = "block";
+            const hosNo = new URL(location.href).searchParams.get("no");
+            submitFiles(hosNo);
+            console.log(hosNo);
           })
           .catch((error) => {
             console.error("실패:", error);
+          });
+      };
+      //사진인서트
+      function submitFiles(no) {
+        console.log(no);
+        let formData = new FormData();
+        let files = document.querySelector(".hospital-files").files;
+
+        if (files.length == 0) {
+          return;
+        }
+
+        for (let i = 0; i < files.length; i++) {
+          if (
+            files[i].name.includes(".bmp") ||
+            files[i].name.includes(".jpeg") ||
+            files[i].name.includes(".jpg") ||
+            files[i].name.includes(".gif") ||
+            files[i].name.includes(".png") ||
+            files[i].name.includes(".tiff") ||
+            files[i].name.includes(".psd") ||
+            files[i].name.includes(".tga") ||
+            files[i].name.includes(".ai") ||
+            files[i].name.includes(".svg") ||
+            files[i].name.includes(".exif") ||
+            files[i].name.includes(".jfif")
+          ) {
+            formData.append("files", files[i]);
+            formData.append("hosNo", no); //  여기 입력되는 정수가 커뮤 번호여야 한다
+          }
+        }
+        $.ajax({
+          url: "http://175.106.99.31/hospitalImg/insertHosImg",
+          data: formData,
+          cache: false,
+          contentType: false,
+          processData: false,
+          type: "POST",
+          success: function (data) {
+            console.log("데이터 업로드 성공");
+          },
+          error: function (e) {
+            console.log("데이터 업로드 실패");
+          },
+        });
+      }
+      const message = document.querySelector("#hospital-success-message");
+
+      document.querySelector("#hos-delete-ok").onclick = (e) => {
+        let dno = new URL(location.href).searchParams.get("no");
+        fetch(`http://175.106.99.31/hospitalImg/delete/${dno}`, {
+          method: "DELETE",
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.status == "success") {
+              console.log("이미지삭제성공");
+              fetch(`http://175.106.99.31/hospital/delete/${dno}`, {
+                method: "DELETE",
+              })
+                .then((response) => response.json())
+                .then((data) => {
+                  console.log("삭제성공 데이터베이스확인");
+                  location.href =
+                    "http://175.106.99.31/register/hospitals-list.html";
+                });
+            }
+          })
+          .catch((error) => {
+            console.log("실패:", error);
           });
       };
     </script>
